# open-agent

./: .env.example  .env.firecrawl.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.firecrawl.yml  pyproject.toml  todo.md
docs/: README.md  features.md  get-started.md
docs/Features/: README.md  auto-dreaming.md  context-engineering.md  context-governance.md  durable-memory.md  ecosystem-compatibility.md  gateway-and-channels.md  multi-agent.md  observability-and-model-io.md  orchestration-and-sandbox.md  providers.md  runtime.md  session-and-memory.md  session.md  tasks-and-sandbox.md  tools-and-capability-surface.md
docs/Proposals/: README.md  agent-evaluation-platform.md  agent-evaluation-runtime-foundations.md  agent-role-management.md  channel-managed-agent-lifecycle.md  conformance-expansion.md  context-governance-enhancements.md  feishu-cards-and-streaming-replies.md  harness-runtime-followups.md  mcp-runtime-expansion.md  observability-metrics-expansion.md  sandbox-contract-expansion.md  session-and-memory-enhancements.md  tools-and-web-backends-followups.md
docs/developer-guide/: README.md  architecture.md  contributing.md  feishu-e2e-debugging.md  feishu-e2e-tests.md  firecrawl-local-testing.md  pre-merge-checklist.md  web-search-backends.md  wechat-private-chat.md  wecom-private-chat.md
docs/developer-guide/internals/: README.md  agent-observability.md  context-engineering.md  durable-memory.md  gateway-and-frontend.md  harness-and-session.md  model-provider-and-providers.md  module-map.md  module-structure.md  multi-agent.md  object-model.md  skills.md  tasks-and-sandbox.md  tools-and-capability-surface.md
docs/developer-guide/provider-api/: anthropic_messages.openapi.yaml  (+1 more)
frontend/: README.md
frontend/desktop/: README.md
frontend/terminal-tui/: README.md
infra/monitoring/: README.md  docker-compose.yml  smoke_openagent_observability.py  verify-monitoring.sh
src/openagent/: __init__.py  capability_surface.py  context_governance.py  gateway.py  local.py
tests/: __init__.py  test_conformance_baseline.py  test_ecosystem_baseline.py  test_feishu_e2e.py  test_feishu_gateway.py  test_gateway_baseline.py  test_golden_replay.py  test_host_management.py  test_imports.py  test_local_runtime_progression.py  test_mcp_core.py  test_object_model.py  test_observability_baseline.py  test_platform_baseline.py  test_provider_adapters.py  test_runtime_baseline.py  test_terminal_bridge.py  test_terminal_client.py  test_tools_alignment.py  test_web_backends.py  test_wechat_gateway.py  test_wecom_gateway.py
tests/conformance/: test_conformance_baseline.py
tests/durable_memory/: __init__.py  test_dreaming_markdown.py  test_dreaming_models.py  test_dreaming_phases.py  test_dreaming_state.py  test_dreaming_store_integration.py  test_durable_memory_conformance.py  test_golden_replay.py
tests/e2e/: test_feishu_e2e.py  test_local_observability_e2e.py  test_role_management_e2e.py
tests/gateway/: test_feishu_gateway.py  test_gateway_baseline.py  test_host_management.py  test_terminal_client.py  test_wechat_gateway.py
tests/harness/: test_dreaming_scheduler.py  test_golden_replay.py  test_local_runtime_progression.py  test_multi_agent_baseline.py  test_observability_baseline.py  test_otlp_observability.py  test_platform_baseline.py  test_provider_adapters.py  test_role_runtime.py  test_runtime_baseline.py
tests/object_model/: test_imports.py
tests/role/: test_role_loader.py
tests/session/: __init__.py  test_golden_replay.py  test_session_conformance.py  test_session_store.py
tests/support/: __init__.py  feishu_e2e_host.py
tests/tools/: test_ecosystem_baseline.py  test_provider_tool_call_stability_eval.py  test_runtime_tool_surface_eval.py  test_tool_loop_stability_eval.py  test_tool_selection_eval.py  test_tools_alignment.py  test_web_backends.py  tool_eval_support.py
(+236 files in other folders)
