[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "openagent"
version = "0.1.0"
description = "OpenAgent local-first Python agent aligned with the agent-spec."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAgent Contributors" },
]
dependencies = [
    "anthropic>=0.64.0",
    "instructor>=1.15.1",
    "lark-oapi>=1.5.3",
    "openai>=2.0.0",
    "pydantic>=2.11.0",
]

[project.scripts]
openagent-host = "openagent.cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.18.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]
feishu = [
  "lark-oapi>=1.4.14",
]
wechat = [
  "wechatbot-sdk>=0.1.0",
]
wecom = [
  "aiohttp>=3.9",
  "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "feishu_e2e: local real-network Feishu/Lark end-to-end tests",
  "feishu_group_e2e: local real-network Feishu/Lark group-chat end-to-end tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["openagent"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "mypy>=1.18.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]
